fixes updates and improvements authsvc deploy webui image
