# usersvc/gen/http/health/server/encode_decode.go
@@ -1,27 +1,0 @@
-// Code generated by goa v2.0.0-wip, DO NOT EDIT.
-//
-// health HTTP server encoders and decoders
-//
-// Command:
-// $ goa gen github.com/proepkes/speeddate/usersvc/design
-
-package server
-
-import (
-	"context"
-	"net/http"
-
-	goahttp "goa.design/goa/http"
-)
-
-// EncodeCheckResponse returns an encoder for responses returned by the health
-// check endpoint.
-func EncodeCheckResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
-	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res := v.(string)
-		enc := encoder(ctx, w)
-		body := res
-		w.WriteHeader(http.StatusOK)
-		return enc.Encode(body)
-	}
-}
