# usersvc/gen/http/health/server/paths.go
@@ -1,13 +1,0 @@
-// Code generated by goa v2.0.0-wip, DO NOT EDIT.
-//
-// HTTP request path constructors for the health service.
-//
-// Command:
-// $ goa gen github.com/proepkes/speeddate/usersvc/design
-
-package server
-
-// CheckHealthPath returns the URL path to the health service check HTTP endpoint.
-func CheckHealthPath() string {
-	return "/health"
-}
