# usersvc/gen/http/health/server/server.go
@@ -1,113 +1,0 @@
-// Code generated by goa v2.0.0-wip, DO NOT EDIT.
-//
-// health HTTP server
-//
-// Command:
-// $ goa gen github.com/proepkes/speeddate/usersvc/design
-
-package server
-
-import (
-	"context"
-	"net/http"
-
-	health "github.com/proepkes/speeddate/usersvc/gen/health"
-	goa "goa.design/goa"
-	goahttp "goa.design/goa/http"
-)
-
-// Server lists the health service endpoint HTTP handlers.
-type Server struct {
-	Mounts []*MountPoint
-	Check  http.Handler
-}
-
-// ErrorNamer is an interface implemented by generated error structs that
-// exposes the name of the error as defined in the design.
-type ErrorNamer interface {
-	ErrorName() string
-}
-
-// MountPoint holds information about the mounted endpoints.
-type MountPoint struct {
-	// Method is the name of the service method served by the mounted HTTP handler.
-	Method string
-	// Verb is the HTTP method used to match requests to the mounted handler.
-	Verb string
-	// Pattern is the HTTP request path pattern used to match requests to the
-	// mounted handler.
-	Pattern string
-}
-
-// New instantiates HTTP handlers for all the health service endpoints.
-func New(
-	e *health.Endpoints,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) *Server {
-	return &Server{
-		Mounts: []*MountPoint{
-			{"Check", "GET", "/health"},
-		},
-		Check: NewCheckHandler(e.Check, mux, dec, enc, eh),
-	}
-}
-
-// Service returns the name of the service served.
-func (s *Server) Service() string { return "health" }
-
-// Use wraps the server handlers with the given middleware.
-func (s *Server) Use(m func(http.Handler) http.Handler) {
-	s.Check = m(s.Check)
-}
-
-// Mount configures the mux to serve the health endpoints.
-func Mount(mux goahttp.Muxer, h *Server) {
-	MountCheckHandler(mux, h.Check)
-}
-
-// MountCheckHandler configures the mux to serve the "health" service "check"
-// endpoint.
-func MountCheckHandler(mux goahttp.Muxer, h http.Handler) {
-	f, ok := h.(http.HandlerFunc)
-	if !ok {
-		f = func(w http.ResponseWriter, r *http.Request) {
-			h.ServeHTTP(w, r)
-		}
-	}
-	mux.Handle("GET", "/health", f)
-}
-
-// NewCheckHandler creates a HTTP handler which loads the HTTP request and
-// calls the "health" service "check" endpoint.
-func NewCheckHandler(
-	endpoint goa.Endpoint,
-	mux goahttp.Muxer,
-	dec func(*http.Request) goahttp.Decoder,
-	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
-	eh func(context.Context, http.ResponseWriter, error),
-) http.Handler {
-	var (
-		encodeResponse = EncodeCheckResponse(enc)
-		encodeError    = goahttp.ErrorEncoder(enc)
-	)
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
-		ctx = context.WithValue(ctx, goa.MethodKey, "check")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "health")
-
-		res, err := endpoint(ctx, nil)
-
-		if err != nil {
-			if err := encodeError(ctx, w, err); err != nil {
-				eh(ctx, w, err)
-			}
-			return
-		}
-		if err := encodeResponse(ctx, w, res); err != nil {
-			eh(ctx, w, err)
-		}
-	})
-}
