# usersvc/gen/http/health/server/types.go
@@ -1,8 +1,0 @@
-// Code generated by goa v2.0.0-wip, DO NOT EDIT.
-//
-// health HTTP server types
-//
-// Command:
-// $ goa gen github.com/proepkes/speeddate/usersvc/design
-
-package server
